# underground-api

./: .gitignore  API_KEY_SETUP.md  BLUESTAKES_SYNC.md  RAILWAY_DEPLOYMENT.md  README.md  SUPABASE_SETUP.md  auth.py  backfill_bluestakes_data.py  config.py  main.py  migrate_encrypt_passwords.py  pyproject.toml  railway.json  requirements.txt  setup_local_env.py  startup.py  test_backfill_endpoint.py  test_bulk_email.py  test_email_integration.py  test_encryption.py  test_schema_changes.py  test_token_caching.py
config/: __init__.py  supabase_client.py
docs/: BLUESTAKES_SYNC.md  BLUESTAKES_TOKEN_CACHING.md  CREDENTIALS_API.md  ENCRYPTION_IMPLEMENTATION.md  TODO.md
migrations/: add_phone_message_to_leads.sql
routes/: __init__.py  admin.py  companies.py  cron.py  emails.py  pdf_generator.py  profiles.py  tickets.py  tickets_backup.py  tickets_clean.py  token_management.py  users.py
scripts/: backfill_bluestakes_data.py  fix_ticket_numbers_whitespace.py
services/: __init__.py  email_service.py  job_manager.py  ticket_updater_service.py
sql/: users_table.sql
tasks/: email_digest.py  jobs.py  response_sync.py  ticket_data_sync.py  ticket_sync.py  ticket_update_jobs.py  updatable_tickets.py  user_management.py
templates/email/: user_invitation.html  weekly_projects_digest.html
utils/: __init__.py  auth.py  bluestakes.py  bluestakes_token_manager.py  encryption.py  map_render.py
